plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.11'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'io.freefair.lombok' version '8.0.1'
}

group = 'ru.aosinin'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.4'

	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "$spring_boot_version"
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "$spring_boot_version"

	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: "$spring_boot_version"

	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "$spring_boot_version"
}

tasks.named('test') {
	useJUnitPlatform()
}
